# Lesson-10-Task-2

./: CMakeLists.txt  Figure.h  IsoscelesTriangle.cpp  Lesson 10 Task 2.cpp  Quadrangle.h  Rectangle.h  Rhomb.h  RightTriangle.h  Square.h  Triangle.cpp  Triangle.h
